Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5.4
-
None
-
Windows 10 18363
Description
Today i tried upgrading from 10.4.13 to 10.5.4 without success. On my windows machine i've installed Mariadb as a service.
When i upgrade mariadb server files and than want to start the server again, it crashes instantly. In windows errors logs i have the following error message.
I've seen that with 10.5.x the ucrtbase.dll is not shipped anymore with the "bin" folder of mariadb. Now this missing module is taken from my Windows/System32 folder which results in a crash, maybe because it's incompatible with mariadb.
I cannot get it to work. I have reverted back to 10.4.13 which works like a charm.
Name der fehlerhaften Anwendung: mysqld.exe, Version: 10.5.4.0, Zeitstempel: 0x5ef224e3
|
Name des fehlerhaften Moduls: ucrtbase.dll, Version: 10.0.18362.815, Zeitstempel: 0x32a6df9a
|
Ausnahmecode: 0xc0000005
|
Fehleroffset: 0x0000000000023838
|
ID des fehlerhaften Prozesses: 0x314c
|
Startzeit der fehlerhaften Anwendung: 0x01d64dd9d949e3c3
|
Pfad der fehlerhaften Anwendung: c:\srv\mariadb\bin\mysqld.exe
|
Pfad des fehlerhaften Moduls: C:\Windows\System32\ucrtbase.dll
|
Berichtskennung: fac4cfb2-9443-4387-bd34-598660c851dc
|
Vollständiger Name des fehlerhaften Pakets:
|
Anwendungs-ID, die relativ zum fehlerhaften Paket ist:
|
Attachments
Issue Links
- is duplicated by
-
MDEV-23129 I can not start the service of the current version 10.5.4 again.
-
- Closed
-
Activity
Field | Original Value | New Value |
---|---|---|
Labels | need_feedback |
Attachment | mariadb.zip [ 52426 ] |
Attachment | Report.zip [ 52427 ] |
Assignee | Vladislav Vaintroub [ wlad ] |
Summary | Cannot run/crash 10.5.4 on windows because of ucrtbase.dll | Service registered with deprecated "mysqld.exe --install" do not start |
Summary | Service registered with deprecated "mysqld.exe --install" do not start | Service registered with deprecated "mysqld.exe --install" crashes on startup |
Labels | need_feedback |
Component/s | Platform Windows [ 10138 ] | |
Component/s | Server [ 13907 ] | |
Fix Version/s | 10.5.5 [ 24423 ] | |
Resolution | Fixed [ 1 ] | |
Status | Open [ 1 ] | Closed [ 6 ] |
Link |
This issue is duplicated by |
Workflow | MariaDB v3 [ 110592 ] | MariaDB v4 [ 158034 ] |
It crashes it one of the ucrtbase.dll functions, but not because we do not ship ucrtbase.dll. This dll is part of your Windows 10. If it is part of OS (and it is since Windows 8.1) , It will always load from system32, whether it is put into executable directory, or not. And anything prior to Windows 8.1 had already reached end of life, thus there is no whatever reason to put it into executable's directory.
And it crashes because there is some bug in mariadb.
Would it be possible to provide at least the error log, and ideally also the crash dump? And all supplemental files, like e.g my.ini