MDEV-23038 Service registered with deprecated "mysqld.exe --install" crashes on startup

Services, which is registered with 2 arguments "C:\path\to\mysqld.exe service_name"
would pass non-null terminated command line to win_main(), and this
would crash in defaults handling.

Make sure win_main() gets null-terminated argv.